<resources>
    <string name="app_name">ColorMyViews</string>
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="button_red">RED</string>
    <string name="button_yellow">YELLOW</string>
    <string name="button_green">GREEN</string>
    <string name="how_to_play">How to play : </string>
    <string name="tap_the_boxes_and_buttons"> Tap the Screen and Buttons</string>
    <string name="red_button">RED</string>
    <string name="yellow_button">YELLOW</string>
    <string name="magenta_button">MAGENTA</string>
    <string name="cyan_button">CYAN</string>
</resources>